:bento: Store current active components in team resource
* :bento: Store current active namespace in team component

* :white_check_mark: Add tests

* :rotating_light:

* :bug: Store current active components if success

* :memo: Make swag

* :white_check_mark: Add test in case of failure promotion

* :bento: Change to store components from samsahai controller
